--- a/view/lobby_view.mustache
+++ b/view/lobby_view.mustache
@@ -25,6 +25,11 @@
                         <i class="mx-2 sm:mx-1 lg:w-1/5 text-center fa-solid fa-question"></i>
                         <p class="mx-2 sm:mx-1 lg:w-4/5 text-base">Crear pregunta</p>
                     </a>
+                    <a href="/tpFinal/crearCategoria/list"
+                       class="flex justify-center lg:justify-start items-center hover:text-white text-center lg:text-start focus:bg-gray-700 focus:text-white text-gray-400 rounded px-3 py-2 w-full lg:w-52">
+                        <i class="mx-2 sm:mx-1 lg:w-1/5 text-center fa-solid fa-question"></i>
+                        <p class="mx-2 sm:mx-1 lg:w-4/5 text-base">Crear Categoria</p>
+                    </a>
                     <a href="/tpFinal/ranking/list"
                        class="flex justify-center lg:justify-start items-center hover:text-white text-center lg:text-start focus:bg-gray-700 focus:text-white text-gray-400 rounded px-3 py-2 w-full lg:w-52">
                         <i class="mx-2 sm:mx-1 lg:w-1/5 text-center fa-solid fa-ranking-star"></i>
