Subido lo de categoria, que puede revisar
lo que puede revisar el editor, tambien hay cambios en la bd, fijarse, son estado_categoria y el alter table de categoria, tambien, poner 1 o 2 en categoria en id_estado_categoria para ver si es activa o suspendida !!!

--- a/view/lobby_view.mustache
+++ b/view/lobby_view.mustache
@@ -41,6 +41,11 @@
                             <i class="mx-2 sm:mx-1 lg:w-1/5 text-center fa-solid fa-check"></i>
                             <p class="mx-2 sm:mx-1 lg:w-4/5 text-base">Revisión de preguntas</p>
                         </a>
+                        <a href="/tpFinal/editor/revisionCategorias"
+                           class="flex justify-center lg:justify-start items-center hover:text-white text-center lg:text-start focus:bg-gray-700 focus:text-white text-gray-400 rounded px-3 py-2 w-full lg:w-52">
+                            <i class="mx-2 sm:mx-1 lg:w-1/5 text-center fa-solid fa-check"></i>
+                            <p class="mx-2 sm:mx-1 lg:w-4/5 text-base">Revisión de categorias</p>
+                        </a>
                     {{/editor}}
                     {{#administrador}}
                         <a href="/tpFinal/administrador/estadisticas"
