ahora en la vista tambien jsjs
.

--- a/view/revisionCategorias_view.mustache
+++ b/view/revisionCategorias_view.mustache
@@ -32,9 +32,9 @@
     }
 
     .estado3:before {
-        content: 'Reportada';
-        background-color: #fde047;
-        color: #854d0e;
+        content: 'Sugerida';
+        background-color: #7dd3fc;
+        color: #075985;
     }
 
     .estado4:before {
@@ -129,6 +129,7 @@
                 <option value="todos">Todos</option>
                 <option value="1">Activa</option>
                 <option value="2">Suspendida</option>
+                <option value="3">Sugerida</option>
             </select>
             <div>
                 <button class="hidden" id="reproducirMusica">
